testsuite/tests/typecheck/should_fail/T7851.hs
module T7851 where

import Control.Monad.Trans.State

bar = do print
         print "Hello"
