testsuite/tests/typecheck/should_fail/T7851.stderr

T7851.hs:5:10: error:
    • Couldn't match expected type ‘IO a1’
                  with actual type ‘a0 -> IO ()’
    • Probable cause: ‘print’ is applied to too few arguments
      In a stmt of a 'do' block: print
      In the expression:
        do { print;
             print "Hello" }
      In an equation for ‘bar’:
          bar
            = do { print;
                   print "Hello" }
